# autonomous_builder

./: .gitignore  AUTONOMOUS_BUILDER_IMPLEMENTATION_REPORT.md  README.md  pyproject.toml  requirements.txt
autonomous_builder/: __init__.py  __main__.py  cli.py  config.py  models.py  runner.py  supervisor.py  templates_data.py
autonomous_builder/claude/: __init__.py  driver.py  parser.py  prompts.py  session.py
autonomous_builder/execution/: __init__.py  completion.py  discovery.py  retry.py  verifier.py  watchdog.py
autonomous_builder/repository/: __init__.py  git.py  graphify.py  ledger.py  reports.py
autonomous_builder/state/: __init__.py  dashboard.py  store.py
autonomous_builder/templates/: final_test_deck_prompt.md  packet_prompt.md  repair_prompt.md
projects/deckflip-runtime/: config.yaml  starting_prompt.md
tests/: conftest.py  test_completion.py  test_config.py  test_discovery.py  test_git.py  test_ledger.py  test_parser.py  test_prompts.py  test_retry.py  test_runner_fake.py  test_session_fake.py  test_state.py  test_supervisor.py  test_verifier.py  test_watchdog.py
